  - #4414, Include version number in address_standardizer lib (Raúl Marín)
  - #4334, Fix upgrade issues related to renamed function parameters (Raúl Marín)
  - #4442, raster2pgsql now skips NODATA tiles. Use -k option if you still want
           them in database for some reason. (Darafei Praliaskouski)
  - #4433, 32-bit hash fix (requires reindexing hash(geometry) indexes) (Raúl Marín)

* New Features *
  - #2902, postgis_geos_noop (Sandro Santilli)
  - #4128, ST_AsMVT support for Feature ID (Stepan Kuzmin)
  - #4230, SP-GiST and GiST support for ND box operators overlaps, contains,
           within, equals (Esteban Zimányi and Arthur Lesuisse from Université
           Libre de Bruxelles (ULB), Darafei Praliaskouski)
  - #4171, ST_3DLineInterpolatePoint (Julien Cabieces, Vincent Mora)
  - #4311, Introduce WAGYU to validate MVT polygons. This option requires a C++11
           compiler and will use CXXFLAGS (not CFLAGS). Add `--without-wagyu`
           to disable this option and keep the behaviour from 2.5 (Raúl Marín)
  - #1833, ST_AsGeoJSON(row) generates full GeoJSON Features (Joe Conway)
  - #3687, Casts json(geometry) and jsonb(geometry) for implicit GeoJSON
           generation (Paul Ramsey)

* Enhancements and fixes *
  - #4342, Move deprecated functions into legacy.sql file
  - #4341, Using "support function" API in PgSQL 12+ to replace SQL inlining
           as the mechanism for providing index support under ST_Intersects, et al
  - #4330, postgis_restore OOM when output piped to an intermediate process
           (Hugh Ranalli)
  - #4322, Support for Proj 6+ API, bringing more accurate datum transforms
           and support for WKT projections
  - #4153, ST_Segmentize now splits segments proportionally (Darafei
           Praliaskouski).
  - #4162, ST_DWithin documentation examples for storing geometry and
           radius in table (Darafei Praliaskouski, github user Boscop).
  - #4161 and #4294, ST_AsMVTGeom: Shortcut geometries smaller than the