@@ -167,7 +167,6 @@
 /* Machine endianness */
 #define XDR 0 /* big endian */
 #define NDR 1 /* little endian */
-uint64_t uint32_interleave_2(uint32_t u1, uint32_t u2);
 
 
 /*
