@@ -377,6 +377,12 @@ CREATE OR REPLACE FUNCTION geometry_cmp(geom1 geometry, geom2 geometry)
 	AS 'MODULE_PATHNAME', 'lwgeom_cmp'
 	LANGUAGE 'c' IMMUTABLE STRICT _PARALLEL;
 
+-- Availability: 3.0.0
+CREATE OR REPLACE FUNCTION geometry_sortsupport(internal)
+	RETURNS void
+	AS 'MODULE_PATHNAME', 'lwgeom_sortsupport'
+	LANGUAGE 'c' IMMUTABLE STRICT _PARALLEL;
+
 --
 -- Sorting operators for Btree
 --
@@ -424,7 +430,9 @@ CREATE OPERATOR CLASS btree_geometry_ops
 	OPERATOR	3	= ,
 	OPERATOR	4	>= ,
 	OPERATOR	5	> ,
-	FUNCTION	1	geometry_cmp (geom1 geometry, geom2 geometry);
+	FUNCTION	1	geometry_cmp (geom1 geometry, geom2 geometry),
+	-- Availability: 3.0.0
+	FUNCTION	2	geometry_sortsupport(internal);
 
 --
 -- Sorting operators for Btree
